fix: navigation bar not visible on smaller device

--- a/css/components/navigation.css
+++ b/css/components/navigation.css
@@ -11,7 +11,7 @@ nav,
 ul {
     display: flex;
     justify-content: space-evenly;
-    gap: 4rem;
+    gap: 3rem;
 }
 ul,
 li {
